<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">MediPal</string>
    <string name="generic_error">Sorry something went wrong! We\'re looking into it!</string>
    <string name="appointment">Appointment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="consumed_date">Consumed Date</string>
    <string name="consumed_time">Consumed Time</string>
    <string name="consumed_qty">Quantity</string>
    <string name="consumed_medicine">Medicine</string>
    <string name="consumedOn">Consumed On : </string>
    <string name="medicineName">Medicine : </string>
    <string name="quantity">Quantity : </string>
    <string name="description">Description : </string>
    <string name="action_filter">Filter</string>
    <string name="skipped">Medicine missed</string>
    <string name="category_add_name">Category Name</string>
    <string name="category_add_code">Category Code</string>
    <string name="category_add_description">Category Description</string>
    <string name="category_add_remind_default">Category Default Reminder Setting</string>
    <string name="category_add_remind_default_yes">Yes</string>
    <string name="category_add_remind_default_no">No</string>
    <string name="category_add_remind_default_op">Optional</string>
    <string name="category_add_save">Save</string>
    <string name="category_add_cancel">Cancel</string>
    <string name="category_add_save_completed">Category is created successfully.</string>
    <string name="category_add_update_completed">Category is updated successfully.</string>
    <string name="category_add_error_category_name_empty">Please fill in a category name.</string>
    <string name="category_add_error_category_name_length">Please fill in a name below 50 characters.</string>
    <string name="category_add_error_category_code_length">Please fill in a 3 character code.</string>
    <string name="category_add_error_category_code_chara">Please fill in only using characters.</string>
    <string name="category_add_error_category_code_duplicated">This category code already exist. Please use another.</string>
    <string name="category_add_error_description_name_empty">Please fill in some text for description.</string>
    <string name="category_add_error_description_name_length">Please fill in a description below 255 characters.</string>
    <string name="category_list_edit">Edit</string>
    <string name="category_list_description">Description: %1$s</string>
    <string name="category_list_category">Category: %1$s</string>
    <string name="category_list_remind_on">(Remind: On)</string>
    <string name="category_list_remind_off">(Remind: Off)</string>
    <string name="category_list_remind_op">(Remind: Optional)</string>
    <string name="medicine_list_edit">Edit</string>
    <string name="medicine_list_description">Description: %1$s</string>
    <string name="medicine_list_category">Category: %1$s</string>
    <string name="medicine_list_remind_on">Remind: On</string>
    <string name="medicine_list_remind_off">Remind: Off</string>
    <string name="medicine_list_frequency">Frequency: %1$d times/day</string>
    <string name="medicine_list_frequency_interval">Interval: %1$d hours</string>
    <string name="medicine_list_quantity_left">Quantity Left: %1$d </string>
    <string name="medicine_list_dosage">Dosage: %1$s </string>
    <string name="medicine_list_consume_quantity">Consume Quantity: %1$d each time</string>
    <string name="medicine_list_threshold_required">Remind if quantity falls below: %1$d </string>
    <string name="medicine_list_threshold_required_not">Remind if quantity falls below: Not required</string>
    <string name="medicine_list_date_issued">Date issued: </string>
    <string name="medicine_list_date_expired">Date expired: </string>
    <string name="medicine_add_name">Medicine Name</string>
    <string name="medicine_add_description">Medicine Description</string>
    <string name="medicine_add_category">Medicine Category</string>
    <string name="medicine_add_threshold">Thresold Number</string>
    <string name="medicine_add_frequency">Consumption Frequency (per day)</string>
    <string name="medicine_add_frequency_interval">Consumption Interval</string>
    <string name="medicine_add_frequency_start_time">Consumption Start Time</string>
    <string name="medicine_add_quantity">Quantity</string>
    <string name="medicine_add_remind">Reminder</string>
    <string name="medicine_add_expire_factor">Expire Factor</string>
    <string name="medicine_add_dosage">Dosage</string>
    <string name="medicine_add_consume_quantity">Consume Quantity (each time)</string>
    <string name="medicine_add_date_issue">Date Issue</string>
    <string name="medicine_add_cancel">Cancel</string>
    <string name="medicine_add_save">Save</string>
    <string name="medicine_add_delete">Delete</string>
    <string name="medicine_add_save_completed">Medicine is created successfully.</string>
    <string name="medicine_add_update_completed">Medicine is updated successfully.</string>
    <string name="medicine_add_delete_completed">Medicine is deleted successfully.</string>
    <string name="medicine_add_error_name_empty">Please fill in a medicine name.</string>
    <string name="medicine_add_error_name_duplicated">This medicine name already exist. Please use another.</string>
    <string name="medicine_add_error_name_length">Please fill in a name below 50 characters.</string>
    <string name="medicine_add_error_description_empty">"Please fill in a medicine description."</string>
    <string name="medicine_add_error_description_length">Please fill in a description below 255 characters.</string>
    <string name="medicine_add_error_category_empty">Please selected a category.</string>
    <string name="medicine_add_error_frequency_empty">Please fill in a frequency name.</string>
    <string name="medicine_add_error_frequency_length">Please fill in a frequency between 0 to 999999.</string>
    <string name="medicine_add_error_frequency_interval_empty">Please fill in a frequency interval name.</string>
    <string name="medicine_add_error_frequency_interval_length">Please fill in a frequency interval between 0 to 999999.</string>
    <string name="medicine_add_error_start_time_empty">Please fill in a  start time.</string>
    <string name="medicine_add_error_start_time_before_today">Please fill in a date after today.</string>
    <string name="medicine_add_error_start_time_format">Please fill in correct frequency start date format.</string>
    <string name="medicine_add_error_quantity_empty">Please fill in a medicine quantity.</string>
    <string name="medicine_add_error_quantity_length">Please fill in a quantity between 1 to 999999.</string>
    <string name="medicine_add_error_dosage_empty">Please selected a dosage.</string>
    <string name="medicine_add_error_consume_quantity_empty">Please fill in a consume quantity.</string>
    <string name="medicine_add_error_consume_quantity_length">Please fill in a consume quantity between 1 to 999999.</string>
    <string name="medicine_add_error_consume_quantity_value">Please fill in consume quantity value smaller than quantity value.</string>
    <string name="medicine_add_error_threshold_empty">Please fill in a threshold.</string>
    <string name="medicine_add_error_threshold_length">Please fill in a threshold between 0 to 999999.</string>
    <string name="medicine_add_error_threshold_value">Please fill in threshold value  smaller than quantity value.</string>
    <string name="medicine_add_error_date_issue_empty">Please fill in a issue date.</string>
    <string name="medicine_add_error_date_issue_before_today">Please fill in a date after today.</string>
    <string name="medicine_add_error_date_issue_format">Please fill in correct issue date format.</string>
    <string name="medicine_add_error_expire_factor_empty">Please fill in a expire factor.</string>
    <string name="medicine_add_error_expire_factor_length">Please fill in a expire factor between 1 to 24.</string>
    <string name="medicine_replenish_reminder_title">Please replenish your medicine!</string>
    <string name="appointment_reminder_title">Coming Appointment</string>
    <string name="appointment_parceable">appointment</string>
    <string name="consumption_parceable">consumption</string>
    <string name="replenish_parceable">replenish</string>
    <string name="title_activity_personal">Personal Bio</string>
    <string name="empty_date">Please enter your date of birth.</string>
    <string name="invalid_date">Please enter valid date of birth.</string>
    <string name="appointment_add_date">Appointment Date</string>
    <string name="appointment_add_time">Appointment Time</string>
    <string name="appointment_add_description">Appointment Description</string>
    <string name="appointment_add_location">Appointment Location</string>
    <string name="appointment_list_delete">Del</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>,
        <xliff:g id="day">%2$s</xliff:g>,
        <xliff:g id="time">%2$s</xliff:g>
    </string>
    <string name="ice_contact_no_numeric">Give Numeric Values</string>
    <string name="ice_contact_no_length">Please fill in  between 10000000 to 99999999.</string>
    <string name="ice_save_contact_alert">Saved New ICE Contact !!!</string>
    <string name="ice_update_contact_alert">Update ICE Contact Info !!!</string>
    <string name="ice_delete_contact_alert">Deleted Successfully !!!</string>
    <string name="health_save_alert">Saved New HealthBio !!!</string>
    <string name="health_update_alert">Updating category completed !!!</string>
    <string name="health_delete_alert">Deleted Successfully !!!</string>
    <string name="health_start_date_alert">Deleted Successfully !!!</string>
    <string name="ice_name">Name</string>
    <string name="ice_contact_no">98765432</string>
    <string name="ice_contact_type">1</string>
    <string name="ice_description">123</string>
    <string name="ice_sequence_no">2e4</string>
    <string name="ice_add_name">Name</string>
    <string name="ice_add_contact_no">Contact Number</string>
    <string name="ice_add_description">Description</string>
    <string name="health_condition">Health Condition</string>
    <string name="health_start_date">Start Date</string>
    <string name="height">Height (cm)</string>
    <string-array name="ice_contact_types">
        <item>Doctor</item>
        <item>Next of Kin</item>
        <item>Emergency Contact</item>
    </string-array>
    <string-array name="ice_contact_sequence">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="health_condition_type">
        <item>a</item>
        <item>c</item>
    </string-array>
    <string-array name="bloodType_items">
        <item>Select BloodType</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="measurement_type">
        <item>Blood Pressure</item>
        <item>Cholesterol Level</item>
        <item>Weight</item>
        <item>Glucose Level</item>
    </string-array>
    <string name="medicine">Medicine</string>
    <string name="category">Category</string>
    <string name="go">Go</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="missed">missed</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
</resources>